--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <db.context>local</db.context>
 
         <dropwizard.version>0.8.4</dropwizard.version>
-        <postgresql.driver.version>9.4-1202-jdbc42</postgresql.driver.version>
+        <postgresql.driver.version>9.4.1208</postgresql.driver.version>
         <jackson.version>2.6.1 </jackson.version>
         <hibernate.version>5.0.2.Final</hibernate.version>
 
@@ -86,6 +86,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.jooq</groupId>
+                <artifactId>jooq</artifactId>
+                <version>3.7.3</version>
+            </dependency>
             <dependency>
                 <groupId>org.jboss.logging</groupId>
                 <artifactId>jboss-logging</artifactId>
@@ -156,7 +161,7 @@
                 <groupId>com.bazaarvoice.dropwizard</groupId>
                 <artifactId>dropwizard-configurable-assets-bundle</artifactId>
                 <version>0.2.2</version>
-            </dependency> 
+            </dependency>
             <dependency>
                 <groupId>javax.ws.rs</groupId>
                 <artifactId>javax.ws.rs-api</artifactId>
