load/unload of workspace snapshot.  Geebus.
May not need the traversal at all, now that I'm dealing with records and
not traversal of object graphs

Cleaned up grouping_agency -> authority.

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -240,6 +240,7 @@
                                             <types>.*</types>
                                         </forcedType>
                                     </forcedTypes>
+                                    <recordVersionFields>version</recordVersionFields>
                                 </database>
                                 <target>
                                     <packageName>com.chiralbehaviors.CoRE.jooq</packageName>
