--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
                 <version>3.7.3</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-dbcp2</artifactId>
+                <version>2.0</version>
+            </dependency>
+            <dependency>
                 <groupId>org.jboss.logging</groupId>
                 <artifactId>jboss-logging</artifactId>
                 <version>3.3.0.Final</version>
@@ -161,7 +166,7 @@
                 <groupId>com.bazaarvoice.dropwizard</groupId>
                 <artifactId>dropwizard-configurable-assets-bundle</artifactId>
                 <version>0.2.2</version>
-            </dependency>
+            </dependency> 
             <dependency>
                 <groupId>javax.ws.rs</groupId>
                 <artifactId>javax.ws.rs-api</artifactId>
