working workspace snapshot de/serialization test.
Yay.

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -198,6 +198,10 @@
                                 <password>${db.password}</password>
                             </jdbc>
                             <generator>
+                                <generate>
+                                    <pojos>true</pojos>
+                                    <daos>true</daos>
+                                </generate>
                                 <database>
                                     <name>org.jooq.util.postgres.PostgresDatabase</name>
                                     <includes>.*</includes>
