--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <properties>
         <db.context>local</db.context>
 
-        <dropwizard.version>0.8.4</dropwizard.version>
+        <dropwizard.version>0.9.1</dropwizard.version>
         <postgresql.driver.version>9.4.1208</postgresql.driver.version>
         <jackson.version>2.6.1 </jackson.version>
         <hibernate.version>5.0.2.Final</hibernate.version>
@@ -85,6 +85,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.bendb.dropwizard</groupId>
+                <artifactId>dropwizard-jooq</artifactId>
+                <version>0.9.1-1</version>
+            </dependency>
             <dependency>
                 <groupId>org.jooq</groupId>
                 <artifactId>jooq</artifactId>
