--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <properties>
         <db.context>local</db.context>
 
-        <dropwizard.version>0.9.1</dropwizard.version>
+        <dropwizard.version>0.9.2</dropwizard.version>
         <postgresql.driver.version>9.4.1208</postgresql.driver.version>
         <jackson.version>2.6.1 </jackson.version>
         <hibernate.version>5.0.2.Final</hibernate.version>
@@ -108,12 +108,17 @@
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-healthchecks</artifactId>
-                <version>3.1.1</version>
+                <version>3.1.2</version>
             </dependency>
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-annotation</artifactId>
-                <version>3.1.1</version>
+                <version>3.1.2</version>
+            </dependency>
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-db</artifactId>
+                <version>${dropwizard.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.dropwizard</groupId>
@@ -449,6 +454,11 @@
                 <artifactId>dropwizard-file-assets</artifactId>
                 <version>0.0.1</version>
             </dependency>
+        <dependency>
+            <groupId>com.loginbox.heroku</groupId>
+            <artifactId>dropwizard-heroku-db</artifactId> 
+            <version>1.0.0</version>
+        </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -468,21 +478,12 @@
             </snapshots>
         </repository>
         <repository>
-            <id>repository.jboss.org-public</id>
-            <name>JBoss.org Maven repository</name>
-            <url>https://repository.jboss.org/nexus/content/groups/public</url>
+            <id>jcenter</id>
+            <url>https://jcenter.bintray.com/</url>
         </repository>
     </repositories>
 
     <pluginRepositories>
-        <pluginRepository>
-            <id>chiralbehaviors-snapshots</id>
-            <url>http://repository-chiralbehaviors.forge.cloudbees.com/snapshot/</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>chiralbehaviors-release</id>
-            <url>http://repository-chiralbehaviors.forge.cloudbees.com/release/</url>
-        </pluginRepository>
         <pluginRepository>
             <id>reflections-repo</id>
             <name>Reflections Maven2 Repository</name>
@@ -492,6 +493,14 @@
             <id>maven-repository.dev.java.net</id>
             <name>Java.net Maven 2 Repository</name>
             <url>http://download.java.net/maven/2</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>chiralbehaviors-snapshots</id>
+            <url>http://repository-chiralbehaviors.forge.cloudbees.com/snapshot/</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>chiralbehaviors-release</id>
+            <url>http://repository-chiralbehaviors.forge.cloudbees.com/release/</url>
         </pluginRepository>
     </pluginRepositories>
 
