--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -125,7 +125,7 @@
                         <configuration>
                             <excludes>
                                 <exclude>logback-test.xml</exclude>
-                                <exclude>jpa.properties</exclude>
+                                <exclude>db.properties</exclude>
                             </excludes>
                         </configuration>
                     </execution>
