--- a/phantasm-at-rest/src/test/resources/oauth.yml
+++ b/phantasm-at-rest/src/test/resources/oauth.yml
@@ -1,8 +1,14 @@
 auth: BEARER_TOKEN 
 
 logging:
-  level: ERROR
+  level: INFO
   loggers:
-    org.hibernate: ERROR
-    org.glassfish: ERROR
-    graphql: WARN
+    org.jooq: INFO
+    org.glassfish: INFO
+    graphql: INFO
+
+database:
+    url: jdbc:postgresql://${db.server}:${db.port}/${db.database}
+    user: ${db.login}
+    password: ${db.password}
+    driverClass: org.postgresql.Driver
