--- a/loader/pom.xml
+++ b/loader/pom.xml
@@ -45,4 +45,12 @@
             <artifactId>postgresql</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
+    </build>
 </project>
