Add jacoco code coverage and publish to coveralls

--- a/phantasm-at-rest/src/test/resources/oauth.yml
+++ b/phantasm-at-rest/src/test/resources/oauth.yml
@@ -1,11 +1,11 @@
 auth: BEARER_TOKEN 
 
 logging:
-  level: INFO
+  level: WARN
   loggers:
-    org.jooq: INFO
-    org.glassfish: INFO
-    graphql: INFO
+    org.jooq: WARN
+    org.glassfish: WARN
+    graphql: WARN
 
 database:
     url: jdbc:postgresql://${db.server}:${db.port}/${db.database}
