--- a/pom.xml
+++ b/pom.xml
@@ -244,7 +244,7 @@
                 <groupId>${project.groupId}</groupId>
                 <artifactId>phantasm-plugin</artifactId>
                 <version>${project.version}</version>
-            </dependency>  
+            </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>animations</artifactId>
@@ -444,11 +444,11 @@
                 <artifactId>dropwizard-file-assets</artifactId>
                 <version>0.0.1</version>
             </dependency>
-        <dependency>
-            <groupId>com.loginbox.heroku</groupId>
-            <artifactId>dropwizard-heroku-db</artifactId> 
-            <version>1.0.0</version>
-        </dependency>
+            <dependency>
+                <groupId>com.loginbox.heroku</groupId>
+                <artifactId>dropwizard-heroku-db</artifactId>
+                <version>1.0.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -558,7 +558,7 @@
                         <enableAssertions>true</enableAssertions>
                     </configuration>
                     <version>2.17</version>
-                </plugin> 
+                </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
@@ -623,7 +623,7 @@
                         <port>9999</port>
                         <tempWebappDirectory>${basedir}/target/site/tempdir</tempWebappDirectory>
                     </configuration>
-                </plugin> 
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
@@ -667,7 +667,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>2.8</version>
-                </plugin> 
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
@@ -688,5 +688,62 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-    </build> 
+    </build>
+    <profiles>
+        <profile>
+            <id>coverage</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>0.7.5.201505241946</version>
+                        <executions>
+                            <execution>
+                                <id>default-prepare-agent</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>default-report</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>default-check</id>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>COMPLEXITY</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.0</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.eluder.coveralls</groupId>
+                        <artifactId>coveralls-maven-plugin</artifactId>
+                        <version>4.1.0</version>
+                        <configuration>
+                            <repoToken>${coveralls.repo.token}</repoToken>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
