--- a/phantasm-at-rest/pom.xml
+++ b/phantasm-at-rest/pom.xml
@@ -104,7 +104,7 @@
                     <artifactId>dropwizard-db</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency> 
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -161,7 +161,7 @@
                 <executions>
                     <execution>
                         <id>copy</id>
-                        <phase>generate-resources</phase>
+                        <phase>test</phase>
                         <goals>
                             <goal>copy</goal>
                         </goals>
@@ -234,4 +234,22 @@
             </plugins>
         </pluginManagement>
     </build>
+    <profiles>
+        <profile>
+            <id>coverage</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId> 
+                        <configuration>
+                            <excludes>
+                                <exclude>**/PluginTest.java</exclude> 
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
