--- a/pom.xml
+++ b/pom.xml
@@ -542,6 +542,11 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.10</version>
+                </plugin>
+                <plugin>
                     <groupId>${project.groupId}</groupId>
                     <artifactId>loader-plugin</artifactId>
                     <version>${project.version}</version>
