--- a/phantasm-at-rest/pom.xml
+++ b/phantasm-at-rest/pom.xml
@@ -90,10 +90,8 @@
             <artifactId>loader</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.chiralbehaviors.CoRE</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>test-plugin</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.bendb.dropwizard</groupId>
@@ -161,7 +159,7 @@
                 <executions>
                     <execution>
                         <id>copy</id>
-                        <phase>package</phase>
+                        <phase>compile</phase>
                         <goals>
                             <goal>copy</goal>
                         </goals>
