Some cleanup and coverage work

--- a/loader-plugin-test/pom.xml
+++ b/loader-plugin-test/pom.xml
@@ -13,7 +13,7 @@
 
     <profiles>
         <profile>
-            <id>functional.test</id>
+            <id>plugin.functional.test</id>
             <build>
                 <plugins>
                     <plugin>
