--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <postgresql.driver.version>9.4.1208</postgresql.driver.version>
         <jackson.version>2.6.3 </jackson.version>
         <hibernate.version>5.0.2.Final</hibernate.version>
+        <jacoco.version>0.7.5.201505241946</jacoco.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -702,41 +703,26 @@
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <version>0.7.5.201505241946</version>
+                        <configuration>
+                            <excludes>
+                                <exclude>com/chiralbehaviors/CoRE/jooq/**/*</exclude>
+                                <exclude>com/chiralbehaviors/CoRE/workspace/dsl/**/*</exclude>
+                            </excludes>
+                        </configuration>
                         <executions>
                             <execution>
-                                <id>default-prepare-agent</id>
+                                <id>prepare-agent</id>
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
                             </execution>
                             <execution>
-                                <id>default-report</id>
-                                <phase>prepare-package</phase>
+                                <id>report</id>
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
                             </execution>
-                            <execution>
-                                <id>default-check</id>
-                                <goals>
-                                    <goal>check</goal>
-                                </goals>
-                            </execution>
                         </executions>
-                        <configuration>
-                            <rules>
-                                <rule>
-                                    <element>BUNDLE</element>
-                                    <limits>
-                                        <limit>
-                                            <counter>COMPLEXITY</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>0.0</minimum>
-                                        </limit>
-                                    </limits>
-                                </rule>
-                            </rules>
-                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.eluder.coveralls</groupId>
