Better transactionality around tests.
Control logging level of core by property

--- a/phantasm-at-rest/src/test/resources/oauth.yml
+++ b/phantasm-at-rest/src/test/resources/oauth.yml
@@ -3,6 +3,7 @@ auth: BEARER_TOKEN
 logging:
   level: WARN
   loggers:
+    com.chiralbehaviors: ${core.log.level}
     org.jooq: WARN
     org.glassfish: WARN
     graphql: WARN
