refactor acm '95 ontology to own bundle.
parse this in the presentation test.  because coverage.

--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>jul-to-slf4j</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>acm-95-ontology</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
