--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>thing-ontology</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>acm-95-ontology</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -72,7 +77,7 @@
                 </executions>
             </plugin>
         </plugins>
-    </build> 
+    </build>
     <profiles>
         <profile>
             <id>enforce-convergence</id>
