--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
         <module>schema</module>
         <module>navi</module>
         <module>test-plugin</module>
+        <module>acm-95-ontology</module>
     </modules>
 
     <dependencyManagement>
@@ -197,6 +198,11 @@
                 <groupId>org.reflections</groupId>
                 <artifactId>reflections</artifactId>
                 <version>0.9.10</version>
+            </dependency> 
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>acm-95-ontology</artifactId>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
