--- a/pom.xml
+++ b/pom.xml
@@ -716,7 +716,9 @@
                             <excludes>
                                 <exclude>com/chiralbehaviors/CoRE/jooq/**/*</exclude>
                                 <exclude>com/chiralbehaviors/CoRE/workspace/dsl/**/*</exclude>
-                                <exclude>/**/HelpMojo.*</exclude>
+                                <exclude>**/HelpMojo.*</exclude>
+                                <exclude>**/English.*</exclude>
+                                <exclude>**/TwoFormInflector.*</exclude>
                             </excludes>
                         </configuration>
                         <executions>
