Fix workspace manifest.  Test HandiNAVI commands.

--- a/phantasm-at-rest/src/test/resources/db.properties
+++ b/phantasm-at-rest/src/test/resources/db.properties
@@ -1,3 +1,12 @@
 user=${db.login}
 password=${db.password}
 url=jdbc:postgresql://${db.server}:${db.port}/${db.database}
+
+core.server=${db.server}
+core.port=${db.port}
+core.db=${db.database}
+dba.server=${dba.db.server}
+dba.port=${dba.db.port}
+dba.db=${dba.db.database}
+dba.login=${dba.db.login}
+dba.password=${dba.db.password}
