--- a/pom.xml
+++ b/pom.xml
@@ -391,6 +391,11 @@
                 <version>2.0.0</version>
             </dependency>
             <dependency>
+                <groupId>graphql-java-annotations</groupId>
+                <artifactId>graphql-java-annotations</artifactId>
+                <version>0.7.0</version>
+            </dependency>
+            <dependency>
                 <groupId>javax.jms</groupId>
                 <artifactId>jms</artifactId>
                 <version>1.1</version>
