add access to meta in ide - correctly, this time
add workspace to existential query

--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -33,5 +33,9 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.hellblazer</groupId>
+            <artifactId>utils</artifactId>
+        </dependency>
     </dependencies>
 </project>
